--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
       <div *ngFor="let casier of selectedResidence.casiers" class="casier">
         <div *ngIf="casier.isOpen" class="casier-inner border-success casier-inner-1" >
           <input type="number" class="form-control" [(ngModel)]="casier.nbEll"><br>
-          <button class="btn btn-outline-secondary" type="button" (click)="casier.isOpen=false">Close</button>
+          <button class="btn btn-outline-secondary" type="button" (click)="casier.isOpen=false">Fermer</button>
         </div>
         <div *ngIf="!casier.isOpen && casier.nbEll" class="casier-inner casier-inner-2 border-danger">
           {{casier.nbEll}}<br>
